[tool.poetry]
name = "py-callback-api"
version = "0.1.0"
description = ""
authors = ["Myracle"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
requests = "^2.32.2"
pylint = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
